Related: fdo#74284 try AccessibleRole::PANEL for VclBoxes under windows

Change-Id: Ic8c743c2646c8610b3d90425024413b40dfdab13